--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200..700&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @custom-variant dark (&:is(.dark *));
 
